# pytorch_classification

./: LICENSE  README.md  cfg.py  cnn_ml.py  predict.py  run.sh  train.py  train_kd.py  train_val.py
Visualization/: Feature_Visualization.ipynb
cls_models/: __init__.py  model.py
cpp_inference/: CMakeLists.txt  compile.sh
cpp_inference/classification/: CMakeLists.txt  test_ImgCls.cpp
cpp_inference/classification/include/: ImgCls.hpp
cpp_inference/classification/src/: ImgCls.cpp
cpp_inference/traced_model/: trace_model.py
data/: __init__.py  dataset.py  normalize.py  preprocess.py  random_eraser.py  transform.py
dataset/: __init__.py  cls_dataset.py  transform.py
deployment/c++_libtorch/: CMakeLists.txt  SaveTorchscriptModel.py
deployment/flask_v1/: client.py  server.py  transform.py
deployment/flask_v2/: redis_db.py  server.py  streess_test.py
deployment/flask_v2/models/: resnext_wsl.py
ensamble/: kaggle_vote.py
ensamble/samples/: method_1.csv  method_2.csv  method_3.csv
flask_deployment/: README.md
flask_deployment/c++_libtorch/: main.cpp
flask_deployment/flask_v2/: cfg.py  utils.py
flask_deployment/flask_v2/models/vision/: __init__.py
models/: __init__.py  build_model.py  resnext_wsl.py
sample_files/imgs/: listfile.txt
tools/: evaluation.py  predict.py  train_val.py
trt_inference/: CMakeLists.txt  convert_onnx.py  labels.txt
trt_inference/include/: TrtCls.hpp
trt_inference/src/: TrtCls.cpp
utils/: __init__.py  label_smoothing_pytorch.py  loss_kd.py  lr_scheduler.py  opts.py  util.py  warmup_lr.py
visualization/: Feature_Visualization.py
